// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message returns eventMessages 1`] = `
Object {
  "event": Object {
    "__typename": "Event",
    "messages": Object {
      "__typename": "EventMessagesConnection",
      "edges": Array [
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 5",
            "ts": "1519765415795",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.0.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.0",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 4",
            "ts": "1519765415785",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.1.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.1",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 3",
            "ts": "1519765415775",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.2.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.2",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 2",
            "ts": "1519765415765",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.3.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.3",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 1",
            "ts": "1519765415755",
            "user": Object {
              "__typename": "User",
              "id": "aea68a98-591c-11e8-9cdb-872a15ebfd30",
              Symbol(id): "User:aea68a98-591c-11e8-9cdb-872a15ebfd30",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.4.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages.edges.4",
        },
      ],
      Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages",
    },
    Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"})",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`message returns first n results 1`] = `
Object {
  "event": Object {
    "__typename": "Event",
    "messages": Object {
      "__typename": "EventMessagesConnection",
      "edges": Array [
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 5",
            "ts": "1519765415795",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"first\\":2}).edges.0.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"first\\":2}).edges.0",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 4",
            "ts": "1519765415785",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"first\\":2}).edges.1.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"first\\":2}).edges.1",
        },
      ],
      Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"first\\":2})",
    },
    Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"})",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`message returns last n results 1`] = `
Object {
  "event": Object {
    "__typename": "Event",
    "messages": Object {
      "__typename": "EventMessagesConnection",
      "edges": Array [
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 2",
            "ts": "1519765415765",
            "user": Object {
              "__typename": "User",
              "id": "e5380f3c-57c8-11e8-b397-7be415c41792",
              Symbol(id): "User:e5380f3c-57c8-11e8-b397-7be415c41792",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"last\\":2}).edges.0.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"last\\":2}).edges.0",
        },
        Object {
          "__typename": "EventMessagesEdge",
          "node": Object {
            "__typename": "Message",
            "event": Object {
              "__typename": "Event",
              "id": "516f21b1-aff8-4ae0-be1f-e99b415f3652",
              Symbol(id): "Event:516f21b1-aff8-4ae0-be1f-e99b415f3652",
            },
            "text": "message text 1",
            "ts": "1519765415755",
            "user": Object {
              "__typename": "User",
              "id": "aea68a98-591c-11e8-9cdb-872a15ebfd30",
              Symbol(id): "User:aea68a98-591c-11e8-9cdb-872a15ebfd30",
            },
            Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"last\\":2}).edges.1.node",
          },
          Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"last\\":2}).edges.1",
        },
      ],
      Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"}).messages({\\"last\\":2})",
    },
    Symbol(id): "$ROOT_QUERY.event({\\"id\\":\\"516f21b1-aff8-4ae0-be1f-e99b415f3652\\"})",
  },
  Symbol(id): "ROOT_QUERY",
}
`;
